fix-header - fix CSS structuring on large screens

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <!-- Barra de Navegacion -->
-        <nav class="navbar navbar-expand-sm bg-body-tertiary">
+        <nav class="navbar navbar-expand-sm bg-body-tertiary container-xxl">
             <div class="container-fluid">
                 <button
                     class="navbar-toggler"
