fix-principal-banner - fix css structuring on large screens

--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
             </div>
         </nav>
         <!--Banner principial-->
-        <div id="carouselExampleIndicators" class="carousel slide">
+        <div
+            id="carouselExampleIndicators"
+            class="carousel slide container-xxl"
+        >
             <div class="carousel-indicators">
                 <button
                     type="button"
