fix-principal-products fix CSS structuring on large screen

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </button>
         </div>
         <!-- Productos principales -->
-        <div class="main-products container-fluid">
+        <div class="main-products container-xxl">
             <div class="row">
                 <div class="col title"><h2>Productos más solicitados</h2></div>
             </div>
