--- a/index.html
+++ b/index.html
@@ -443,8 +443,8 @@
         </div>
         <!-- personalized -->
         <div id="anchor-diamond"></div>
-        <div class="personalized container-fluid">
-            <div class="row">
+        <div class="personalized">
+            <div class="row container-xxl">
                 <div class="left-panel col-12 col-md-6">
                     <span class="color-gray"
                         >Nullam volutpat sed odio vitae tincidunt</span
