refactor(caroulse-products): Responsiveness has been improved to 400px

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                 ></i>
                 <div id="horizontalScrollPanel2" class="scroll-list-panel">
                     <div class="card-body">
-                        <div class="top-body">
+                        <div class="top-body container-sm">
                             <div class="discount">-5%</div>
                             <a href="#" target="_blank">
                                 <img src="images/rings/1.webp" />
